@@ -1,3 +1,8 @@
+2006-02-24  Naba Kumar  <naba@gnome.org>
+
+	* plugins/editor/text_editor.c: Fixed change in API in
+	IAnjutaEditorSelection::set().
+	
 2006-02-24  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>
 
 	* plugins/sourceview/sourceview.c, plugins/search/plugin.c,
